refactor: GlobalHandlerException and include logs